--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<link href="css/style.css rel="stylesheet" />
+<link href="css/style.css" rel="stylesheet" />
 
 <head>
     <meta charset="utf-8">
@@ -11,14 +11,15 @@
 </head>
 
 <body>
-    <h1>Sting</h1>>
-    <img href="img/Sting.jpg" alt="Sting in Concert">
+    <h1>Sting Page</h1>
+    <img src="img/Sting.jpg" alt="Sting in Concert"/>
+    
     <p>I saw Sting last night in Climate Pledge Arena. Good concert. </p>
 
     <ol>
-        <li>We had good seats</li>
-        <li>I liked the playlst</li>
-        <l1>He's a talented musician</l1>
+        <li class="importantLi" >We had good seats</li>
+        <li>I liked the playlist</li>
+        <li>He's a talented musician</li>
     </ol>
 </body>
 
