--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<link href="css/style.css" rel="stylesheet" />
-
 <head>
     <meta charset="utf-8">
     <meta name="author" content="Tim Carlson">
     <meta name="Sting Page" content="Sting - I saw his concert last night">
     <title>Sting</title>
+    <link href="css/style.css" rel="stylesheet" />
 </head>
 
 <body>
     <h1>Sting Page</h1>
     <img src="img/Sting.jpg" alt="Sting in Concert"/>
     
-    <p>I saw Sting last night in Climate Pledge Arena. Good concert. </p>
+    <p>I saw <a href="https://en.wikipedia.org/wiki/Sting_(musician)" >Sting</a> last night in Climate Pledge Arena. Good concert. </p>
 
     <ol>
         <li class="importantLi" >We had good seats</li>
