trying to get gh-pages to work

--- a/problem-a/index.html
+++ b/problem-a/index.html
@@ -18,7 +18,7 @@
     <ol>
         <li class="importantLi" >We had good seats</li>
         <li>I liked the playlist</li>
-        <li>He's a talented musician</li>
+        <li>He's a multi talented musician</li>
     </ol>
 </body>
 
